# cisc878-zk-auth

./: .gitignore  README.md  benchmark.py  demo.py  pyproject.toml
.claude/: settings.local.json
output/doc/: CISC878_Project878_5min_Speaking_Script.docx
output/presentation/: CISC878_Project878_5min_Presentation.pptx  build_presentation.js
output/presentation/assets/: benchmark_output.txt
results/: benchmark.csv
src/zk_auth/: __init__.py  app.py  schnorr.py.BAK
tests/: test_auth.py
