[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zk-passwordless-auth"
version = "0.1.0"
description = "A Schnorr-based zero-knowledge passwordless authentication demo."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
